--- a/client/public/profile.html
+++ b/client/public/profile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Instagram</title>
+        <title>Instagram | Connor Ruesch</title>
         <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
@@ -11,6 +11,7 @@
         <div class="nav">
             <div class="nav-container">
                 <img src="images/Instagram-Logo-2016-present.png" alt="">
+                <p><a href="/">Home</a></p>
             </div>
         </div>
         
